--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,14 @@
 
   <body>
 
-  <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">You need to tile your home?</span>
-    <span class="site-heading-lower"><img style="width: 500px; height: 150px;"  src="img/soababiotiling/facebook_cover_photo_1.png" alt=""></span>
-  </h1>
+  <h3 class="site-headin text-cente text-white d-none d-lg-block m-2">
+    <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"  src="img/edit/logo~3.png" alt=""></span>
+    <span class="site-heading-lower text-primary mb-3"><a href="tel:+23324-505-2539">Call us</a> now let's do an estimate for you. We always give you the right price!</span>
+  </h3>
 
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="/"><img class="responsive mr-2" style="width: 40px; height: 40px;" src="img/edit/twitter_header_photo_1~2.png" alt="">Soababio</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 170px; height: 65px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -67,12 +67,14 @@
                 <span class="section-heading-lower">We're Open</span>
               </h2>
                       <div class="row">
-                          <div class="col-lg-8 col-lg-offset-2 text-center">
+                         
+                          <div class="col-lg-12 col-sm-12 offset-2 ml-auto">
+                              <h2 class="margin-top-0 wow text-center fadeIn"><a class="text-warning" href="tel:+23324-505-2539">Call: +447990713641</a></h2>
                               <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
                               <hr class="primary">
                               <p>Foe enquiries kindly fill out the form below and we'll get back to you as soon as possible.</p>
                           </div>
-                          <div class="col-lg-10 col-lg-offset-1 text-center">
+                          <div class="col-lg-12 col-sm-12  ml-auto">
                               <form action="" id="EmailForm" method=”POST” name=”EmailForm” class="gform contact-form row">   
 
                                  <div class="col-md-4">
@@ -98,11 +100,11 @@
                               </form>
                           </div>
                       </div>
-              <p class="address mb-5">
+              <p class="address mb-5"><br>
                 <em>
-                  <strong>37 High Way,</strong>
+                  <strong>Soababio Tiling Ltd</strong>
                   <br>
-                  East London
+                  Where Quality Talks
                 </em>
               </p>
               <p class="mb-0">
@@ -110,7 +112,7 @@
                   <em>Call Anytime</em>
                 </small>
                 <br>
-                <a href="tel:+447-9907-1384">+447-9907-1384</a>
+                <a href="email:soababiotilingltd@gmail.com">soababiotilingltd@gmail.com</a>
               </p>
             </div>
           </div>
