--- a/about.html
+++ b/about.html
@@ -25,15 +25,16 @@
 
 <body>
   
-   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">You need to tile your home?</span>
-    <span class="site-heading-lower"><img style="width: 500px; height: 150px;"  src="img/soababiotiling/facebook_cover_photo_1.png" alt=""></span>
-  </h1>
+   <h3 class="site-headin text-cente text-white d-none d-lg-block m-2">
+    <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"  src="img/edit/logo~3.png" alt=""></span>
+    <span class="site-heading-lower text-primary mb-3">Spanish trained tiler with over 20 years of experience in tiling!
+    <a href="tel:+23324-505-2539">Call Us</a> for estimate</span>
+  </h3>
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="/"><img class="responsive mr-2" style="width: 40px; height: 40px;" src="img/edit/twitter_header_photo_1~2.png" alt="">Soababio</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 170px; height: 65px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
