change contact num

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <a class="nav-link text-uppercase text-expanded" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
           </li>
         </ul>
       </div>
@@ -93,14 +93,14 @@
        
        
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-          <h2 class="section-heading mb-4">
+          <h3 class="section-heading mb-4">
             <span class="section-heading-upper">Welcome</span>
             <span class="section-heading-lower">Where Quality Talks</span>
-          </h2>
-          <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest assert and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!
+          </h3>
+          <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="tel:+23324-505-2539">Call Us Today!</a>
+            <a class="btn btn-primary btn-xl" href="tel:+447-990-713641">Call Us!</a>
           </div>
         </div>
       </div>
@@ -113,8 +113,8 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Our Promise</span>
-              <span class="section-heading-lower">To You</span>
+              <span class="section-heading-upper">soababiotiling</span>
+              <span class="section-heading-lower">Our Vision</span>
             </h2>
             <p class="mb-0">Samuel's did my tiling professionally to a very high standard I'm so impressed and very very pleased.He came early and did the job as if it's his own property. My bathroom is so beautiful I cannot take my eyes off it. He is very fast and very pleasant guy I will recommend him always to those looking to do their tiling.Well done Samuel and thank you so very much.</p>
           </div>
