--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="gallery.html">Gallery</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
-            </li>
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
             </li>
           </ul>
         </div>
@@ -63,16 +63,16 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Let's here from you</span>
+                <span class="section-heading-upper">Let's hear from you</span>
                 <span class="section-heading-lower">We're Open</span>
               </h2>
                       <div class="row">
                          
                           <div class="col-lg-12 col-sm-12 offset-2 ml-auto">
-                              <h2 class="margin-top-0 wow text-center fadeIn"><a class="text-warning" href="tel:+23324-505-2539">Call: +447990713641</a></h2>
+                              <h2 class="margin-top-0 wow text-center fadeIn"><a class="text-primary" href="tel:+447-990-713641">Call: +447-9907-13641</a></h2>
                               <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
                               <hr class="primary">
-                              <p>Foe enquiries kindly fill out the form below and we'll get back to you as soon as possible.</p>
+                              <p>For enquiries kindly fill out the form below and we'll get back to you as soon as possible.</p>
                           </div>
                           <div class="col-lg-12 col-sm-12  ml-auto">
                               <form action="" id="EmailForm" method=”POST” name=”EmailForm” class="gform contact-form row">   
