--- a/gallery.html
+++ b/gallery.html
@@ -76,24 +76,36 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-1-920x920.jpg" alt="First slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/10.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/14.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Third slide">
             </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/18.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image0%20(1).jpeg" alt="Third slide">
+            </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon bg-warning" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon bg-warning" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
@@ -127,24 +139,36 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/6.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/19.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/15.jpg" alt="Fourth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/1.jpg" alt="Fifth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/6.jpg" alt="Sixth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon bg-warning" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon bg-warning" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
@@ -180,24 +204,32 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-Topps-Tiles-Aqua-Grout-920x920.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/3.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/4.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/5.jpg" alt="Fourth slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/7.jpg" alt="Fifth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon bg-warning" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon bg-warning" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
