--- a/gallery.html
+++ b/gallery.html
@@ -91,13 +91,13 @@
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/14.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/18.jpg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/18.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image0%20(1).jpeg" alt="Third slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image0%20(1).jpeg" alt="Sixth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -148,7 +148,7 @@
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/6.jpg" alt="Second slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/8.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/19.jpg" alt="Third slide">
