--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
   </h4>
 
     <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top  py-lg-4" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-to  py-lg-4" id="mainNav">
     <div class="container">
       <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +80,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           </ol>
-          <div class="carousel-inner">
+          <div class="carousel-inner gallery">
             <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
             </div>
@@ -143,7 +143,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           </ol>
-          <div class="carousel-inner">
+          <div class="carousel-inner gallery">
             <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Ash-White-Living-Room-Wall.jpg" alt="First slide">
             </div>
@@ -207,7 +207,7 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
           </ol>
-          <div class="carousel-inner">
+          <div class="carousel-inner gallery">
             <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-Topps-Tiles-Aqua-Grout-920x920.jpg" alt="First slide">
             </div>
