add social media icons

--- a/about.html
+++ b/about.html
@@ -80,10 +80,50 @@
   </section>
 
   <footer class="footer text-faded text-center py-5">
-    <div class="container">
-      <p class="m-0 small">Copyright &copy; soababiotiling.com</p>
+    <div class="container-fluid text-center text-md-left">
+      <div class="row">
+        <div class="col-md-6 mt-md-0 mt-3 text-center">
+          <h5 class="text-uppercase">Soababio Tiling Ltd</h5>
+          <p><ins>Where quality talks!</ins></p>
+        </div>
+        <hr class="clearfix w-100 d-md-none pb-3">
+        <div class="col-md-2 offset mb-md-0 mb-3">
+          <h5 class="text-uppercase">Links</h5>
+          <ul class="list-unstyled ml">
+            <li>
+              <a class="text-muted" href="index.html">Home</a>
+            </li>
+            <li>
+              <a class="text-muted" href="gallery.html">Gallery</a>
+            </li>
+            <li>
+              <a class="text-muted" href="contact.html">Contact</a>
+            </li>
+            <li>
+              <a class="text-muted" href="about.html">About</a>
+            </li>
+          </ul>
+        </div>
+         <div class="col-xs-6 col-sm-3">
+            <h5>Follow</h5>
+            <ul class="list-inline">
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li> 
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
+            </ul>
+          </div>  
+      </div>
+
     </div>
-  </footer>
+
+<hr class="bg-white">
+<!-- Footer -->
+    <div class="container">
+      <p class="m-0 small"> <script>document.write(new Date().getFullYear());</script> Copyright &copy; soababiotiling.com</p>
+    </div>
+</footer>
+ 
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
