--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Soababio Tiling Ltd - Where Quality Talks. We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!">
+  <meta name="author" content="Soababio TIling Ltd">
 
   <title>Soababio Tiling Ltd</title>
   <link rel="icon" href="img/soababiotiling/favicon.png" sizes="16x16" type="image/png"> 
+  
+  <link href="css/ionicons.min.css" rel="stylesheet">
   
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +26,6 @@
 </head>
 
 <body>
-
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">You need to tile your home?</span>
     <span class="site-heading-lower"><img style="width: 500px; height: 150px;"  src="img/soababiotiling/facebook_cover_photo_1.png" alt=""></span>
@@ -122,17 +123,57 @@
       </div>
     </div>
   </section>
-
+  
   <footer class="footer text-faded text-center py-5">
-    <div class="container">
-      <p class="m-0 small">Copyright &copy; soababiotiling.com</p>
-    </div>
-  </footer>
+    <div class="container-fluid text-center text-md-left">
+      <div class="row">
+        <div class="col-md-6 mt-md-0 mt-3 text-center">
+          <h5 class="text-uppercase">Soababio Tiling Ltd</h5>
+          <p><ins>Where quality talks!</ins></p>
+        </div>
+        <hr class="clearfix w-100 d-md-none pb-3">
+        <div class="col-md-2 offset mb-md-0 mb-3">
+          <h5 class="text-uppercase">Links</h5>
+          <ul class="list-unstyled ml">
+            <li>
+              <a class="text-muted" href="index.html">Home</a>
+            </li>
+            <li>
+              <a class="text-muted" href="gallery.html">Gallery</a>
+            </li>
+            <li>
+              <a class="text-muted" href="contact.html">Contact</a>
+            </li>
+            <li>
+              <a class="text-muted" href="about.html">About</a>
+            </li>
+          </ul>
+        </div>
+         <div class="col-xs-6 col-sm-3">
+            <h5>Follow</h5>
+            <ul class="list-inline">
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li> 
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
+            </ul>
+          </div>  
+      </div>
 
+    </div>
+
+<hr class="bg-white">
+<!-- Footer -->
+    <div class="container">
+      <p class="m-0 small"> <script>document.write(new Date().getFullYear());</script> Copyright &copy; soababiotiling.com</p>
+    </div>
+</footer>
+ 
   <!-- Bootstrap core JavaScript -->
+  
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="vendor/all.min.js"></script>
 </body>
 
 </html>
