--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script src="vendor/all.min.js"></script>
 </body>
 
 </html>
