--- a/contact.html
+++ b/contact.html
@@ -189,8 +189,8 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Script to highlight the active date in the hours list -->
+    <script src="vendor/all.min.js"></script>
+    
     <script>
       $('.list-hours li').eq(new Date().getDay()).addClass('today');
     </script>
