--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="tel:+447-990-713641">Call Us!</a>
+            <a class="btn btn-primary btn-xl" href="tel:+447-990-713641"><i class="fa fa-phone text-muted"></i> Call Us!</a>
           </div>
         </div>
       </div>
