--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                       <div class="row">
                          
                           <div class="col-lg-12 col-sm-12 offset-2 ml-auto">
-                              <h2 class="margin-top-0 wow text-center fadeIn"><a class="text-primary" href="tel:+447-990-713641">Call: +447-9907-13641</a></h2>
+                              <h5 class="margin-top-0 wow text-center fadeIn"><a class="text-primary" href="tel:+447-990-713641">Call: +447-9907-13641</a></h5>
                               <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
                               <hr class="primary">
                               <p>For enquiries kindly fill out the form below and we'll get back to you as soon as possible.</p>
@@ -109,7 +109,7 @@
               </p>
               <p class="mb-0">
                 <small>
-                  <em>Call Anytime</em>
+                  <em>eamil:</em>
                 </small>
                 <br>
                 <a href="email:soababiotilingltd@gmail.com">soababiotilingltd@gmail.com</a>
