--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
               </p>
               <p class="mb-0">
                 <small>
-                  <em>eamil:</em>
+                  <em>email:</em>
                 </small>
                 <br>
                 <a href="email:soababiotilingltd@gmail.com">soababiotilingltd@gmail.com</a>
