chng testimoy to carousel

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,135 @@
         </div>
       </div>
     </nav>
-
+<div class="about-heading-content">
+          <div class="row">
+            <div class="col-xl-9 col-lg-10 mx-auto">
+             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li class="text-danger" data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner mt-1 mb-0">
+                <div class="carousel-item active">
+                   <div class="rounded bg-faded p-3 text-left">
+                      <p>17th Aug, 2020 </p>
+                      <p class="m-4">"Sam goes further then any tiler I have had work for me before - his work ethic is second to none.
+                        Turned up when he said he would and flexible to my timings. 
+                         More then satisfied with the final finish of sams work. 
+                        Will definitely use him again."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>11th Aug, 2020 </p>
+                      <p class="m-4">"Samuel was really good, very prompt, worked fast, excellent quality of work. Very happy and recommend Samuel for all tiling jobs. Will use Samuel again for future jobs."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>3rd Aug, 2020 </p>
+                      <p class="m-4">"Samuel did a fantastic job of our bathroom floor. We couldn’t be happier. He is extremely efficient, tidy and above all very friendly and polite. We’d definitely recommend him."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>20th Jul, 2020 </p>
+                      <p class="m-4">"Samuel was fantastic! He arrived at 7am and was finished tiling our bathroom by 12:30. Incredibly fast, thorough, clean and professional. The tiles look really great. And he is a very nice man too, friendly but gets on with the job. I would not hesitate to employ him again or recommend him to anyone. Thank you Samuel so much for your hard work, we really appreciate it. ~ Lisa + Sam."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>20th Jul, 2020 </p>
+                      <p class="m-4">"Samuel is a brilliant tiler, he’s a very fast and efficient worker, you can leave him alone and he’ll work All day, he did a very professional job For me and is a all round great guy he was on time and cleans up after The job is finished..I will definitely use Samuel again and would highly recommend him to everyone. Thank you so much for your hard work Brother."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>22nd Jul, 2020 </p>
+                      <p class="m-4">"I have had Lots of mixed experiences from my builder. However, Samuel was a diamond in the rough! Just an honest, highly skilled and hardworking family man. Turned up bang on time, did the work to a high standard, tidied up and left before I could even blink an eye. He wasn’t the cheapest quote but I have learnt through my builder not to take the cheapest - buy cheap buy twice.We had bought some expensive tiles so was very keen that they were laid perfectly and Samuel did not disappoint. Will now be our tiler for every job."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>7th Aug, 2020 </p>
+                      <p class="m-4">"I was very pleased with Samuel's work. He did floor tiling on 2 bathrooms in apartment. All was done very efficiently - although he starts early at 7.00am! Not the cheapest tiler - but it was good quality work, and also trustworthy person. Would definitely use again if needed on other tiling jobs."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>14th Jul, 2020 </p>
+                      <p class="m-4">"Sam has just tiled my new bathroom floor and inside the shower. He is a very skilled professional, and is very fast. He is also very tidy and accommodating when booking him in for jobs. I will definitely contact Sam again when I have another tiling job - I'm delighted with his work. Highly recommend!"</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>13th Jul, 2020 </p>
+                      <p class="m-4">"We were very pleased with the tiling work Samuel carried out in our home. He was extremely polite and efficient and I would not hesitate to use him again"</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>26th Jun, 2020 </p>
+                      <p class="m-4">"Samuel's did my tiling professionally to a very high standard I'm so impressed and very very pleased.He came early and did the job as if it's his own property. My bathroom is so beautiful I cannot take my eyes off it. He is very fast and very pleasant guy I will recommend him always to those looking to do their tiling.Well done Samuel and thank you so very much."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                <div class="bg-faded rounded p-3 text-left">
+                      <p>1st May, 2020 </p>
+                      <p class="m-4">"Samuel was very professional, courteous and well organised. He did a great job tiling in the bathroom. Very pleased. Straight forward and no fuss. Many thanks."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                <div class="bg-faded rounded p-3 text-left">
+                      <p>6th Jun, 2020 </p>
+                      <p class="m-4">"Samuel was great to do business with. Reliable and worked diligently. Really pleased with the finish. Would have no hesitation recommending."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>17th Jul, 2020 </p>
+                      <p class="m-4">"Samuel is a fantastic tiler who can work very fast and neat. He did my Garage and patio area tiling perfectly with unbelievable speed. I left the work with him and he did all no disturbs or lost of the question to me. He supposes to complete the job in one day even others asking 2 days to complete and unbelievable he did it just above a half-day with perfectly neat while handling very thick garage tiles than normal tiles. A highly responsive person among all the tilers I contacted. I have no doubt to recommend him for others. He is the best one for your job."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>25th Jan, 2020 </p>
+                      <p class="m-4">"This guy is a fantastic and diligent tiler. He worked perfectly and quickly with utmost dedication 
+ Spectacular piece of workmanship. I will hire him again."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>2nd Feb, 2020 </p>
+                      <p class="m-4">"Samuel did a great job - he was able to fit us in at short notice so I simply went ahead and booked him in based on the other reviews I read. I was glad I did! The quality of his work was very high and we're very pleased with the result. Samuel tidied up after himself and left the kitchen looking spotless. We'd definitely use his services again."</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p>24th Nov, 2019 </p>
+                      <p class="m-4">"Samuel was quite literally the best workman I've ever met. He came exactly on time and at short notice. Our bathroom will be done a week ahead of schedule because of his hard work. We can't thank him enough. 100% would use again and even our plumber said he would use him on future jobs. Thank you Samuel!"</p>
+                   </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="bg-faded rounded p-3 text-left">
+                      <p >10th Jan, 2020 </p>
+                      <p class="m-4 ">"Samuel is simply brilliant. Previous guy started the job...screeded floor really badly - then did a runner while I was out…! Anyway, Samuel came to my rescue the very next day and did a simply stunning job and managed to make good all of the bad work done previously (it was more than a challenge). He also kept to his word and returned the following day (a Sunday) to complete the job even though he had definitely come down with a very bad cold overnight. As per other reviews, Samuel works at lightning speed, is dependable, tidy and a very nice guy indeed. He's not a ‘jack of all trades’ and this is evident in his work – a Master Tiler if there is such a thing. I would not hesitate to hire him again and can't recommend him highly enough. Hire him; you will be glad you did. Overall A+++++ Rating from me"</p>
+                   </div>
+                </div>
+              </div>
+                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only ">Next</span>
+                  </a>
+              </div>
+            </div>
+          </div>
+        </div>
     <section class="page-section cta">
       <div class="container">
         <div class="row">
@@ -123,20 +251,7 @@
     <section class="page-section about-heading">
       <div class="container">
         <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="">
-        <div class="about-heading-content">
-          <div class="row">
-            <div class="col-xl-9 col-lg-10 mx-auto">
-              <div class="bg-faded rounded p-5">
-                <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Soababio Tiling Ltd</span>
-                  <span class="section-heading-lower">About Us</span>
-                </h2>
-                <p>Founded early 2000 by Mr. Samuel Osei Ababio, with vision to...</p>
-                <p class="mb-0">We guarantee and assure quality for money...</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </section>
 
@@ -168,10 +283,10 @@
          <div class="col-xs-6 col-sm-3">
             <h5>Follow</h5>
             <ul class="list-inline">
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li> 
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
-              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+233245052539" title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Facebook"><i class="fab fa-facebook fa-3x text-muted"></i></a>&nbsp;</li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="WhatsApp"><i class="fab fa-whatsapp fa-3x text-muted mt-2"></i></a>&nbsp;</li> 
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Twitter"><i class="fab fa-twitter fa-3x text-muted mt-2"></i></a></li>
+              <li class="list-inline-item"><a rel="nofollow" href="https://wa.me/+447990713641" title="Intagram"><i class="fab fa-instagram fa-3x text-muted"></i></a>&nbsp;</li>
             </ul>
           </div>  
       </div>
