add wellcome msg

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <span class="section-heading-upper">Welcome</span>
             <span class="section-heading-lower">Where Quality Talks</span>
           </h3>
-          <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!
+          <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at <a href="gallery.html"><em>some of our works</em></a> - we guarantee you value for money!
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="tel:+447-990-713641"><i class="fa fa-phone text-muted"></i> Call Us!</a>
@@ -115,9 +115,16 @@
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">soababiotiling</span>
-              <span class="section-heading-lower">Our Vision</span>
+              <span class="section-heading-lower">Welcome</span>
             </h2>
-            <p class="mb-0">Samuel's did my tiling professionally to a very high standard I'm so impressed and very very pleased.He came early and did the job as if it's his own property. My bathroom is so beautiful I cannot take my eyes off it. He is very fast and very pleasant guy I will recommend him always to those looking to do their tiling.Well done Samuel and thank you so very much.</p>
+<!--            <p class="mb-0">-->
+              <p class="text-left">We specialise in all types of tiling, different materials ranging from porcelain, ceramic, granite, slate, natural stone, travertine, marble, mosaics etc.  fixing tiles on underfloor heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old tiles and many more.</p>
+<p class="text-left">We do offer services in price work, per meter square, day, and hours as well as pricing depending on the job.
+             You can contact us for free estimate and quotation now on: <a class="text-info" href="tel:+4479-9017-13641">tel: 079901713641</a></p>
+
+             
+              <p class="mb-0">We guarantee that you will fall in <em>love</em> with our work</p>
+<!--            </p>-->
           </div>
         </div>
       </div>
