fix carousel error

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Soababio Tiling Ltd - Where Quality Talks. We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at some of our works - we guarantee you value for money!">
+    <meta name="author" content="Soababio TIling Ltd">
 
     <title>Soababio Tiling Ltd</title>
     <link rel="icon" href="img/soababiotiling/favicon.png" sizes="16x16" type="image/png">
@@ -27,7 +27,7 @@
 
   <h3 class="site-headin text-cente text-white d-none d-lg-block m-2">
     <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"  src="img/edit/logo~3.png" alt=""></span>
-    <span class="site-heading-lower text-primary mb-3"><a href="tel:+23324-505-2539">Call us</a> now let's do an estimate for you. We always give you the right price!</span>
+    <span class="site-heading-lower text-primary mb-3"><a href="tel:+23324-505-2539">Call us<i class="fa fa-phone text-white"></i></a> now let's do an estimate for you. We always give you the right price!</span>
   </h3>
 
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
