--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-1-920x920.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="Second slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Second slide">
             </div>
-            <div class="carousel-item">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Third slide">
+             <div class="carousel-item">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-1-920x920.jpg" alt="Third slide">
             </div>
+            
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon bg-warning" aria-hidden="true"></span>
@@ -101,7 +102,7 @@
           <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at <a href="gallery.html"><em>some of our works</em></a> - we guarantee you value for money!
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="tel:+447-990-713641"><i class="fa fa-phone text-muted"></i> Call Us!</a>
+            <a class="btn btn-primary btn-lg" href="tel:+447-990-713641"><i class="fa fa-phone text-muted"></i> Call Us!</a>
           </div>
         </div>
       </div>
@@ -114,11 +115,11 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">soababiotiling</span>
-              <span class="section-heading-lower">Welcome</span>
+              <span class="section-heading-upper">soababio tiling</span>
+              <span class="section-heading-lower">Services</span>
             </h2>
 <!--            <p class="mb-0">-->
-              <p class="text-left">We specialise in all types of tiling, different materials ranging from porcelain, ceramic, granite, slate, natural stone, travertine, marble, mosaics etc.  fixing tiles on underfloor heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old tiles and many more.</p>
+              <p class="text-justify">We specialise in all types of tiling, different materials ranging from porcelain, ceramic, granite, slate, natural stone, travertine, marble, mosaics etc.  fixing tiles on underfloor heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old tiles and many more.</p>
 <p class="text-left">We do offer services in price work, per meter square, day, and hours as well as pricing depending on the job.
              You can contact us for free estimate and quotation now on: <a class="text-info" href="tel:+4479-9017-13641">tel: 079901713641</a></p>
 
