--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
 
   <h4 class="site-headin text-cente text-white d-none d-lg-block m-2">
     <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"  src="img/edit/logo~3.png" alt=""></span>
-    <span class="site-heading-lower text-primary mb-3">View our works and over 1000 testimonies from our happy customers. Allow us make you happy too!</span>
+    <span class="site-heading-lower text-primary mb-3">View our works and over 1000 testimonies from our happy customers. <a href="tel:+447-990-713641">Call us <i class="fa fa-phone text-white"></i></a></span>
   </h4>
 
     <!-- Navigation -->
