--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
   <h3 class="site-headin text-cente text-white d-none d-lg-block m-2">
     <span class="site-heading-lower"><img class="responsive mr-2 rounded" style="width: 150px; height: 80px;"  src="img/edit/logo~3.png" alt=""></span>
-    <span class="site-heading-lower text-primary mb-3"><a href="tel:+23324-505-2539">Call us<i class="fa fa-phone text-white"></i></a> now let's do an estimate for you. We always give you the right price!</span>
+    <span class="site-heading-lower text-primary mb-3"><a href="tel:+447-990-713641">Call us <i class="fa fa-phone text-white"></i></a> now let's do an estimate for you. We always give you the right price!</span>
   </h3>
 
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
@@ -200,7 +200,7 @@
                               <h5 class="margin-top-0 wow text-center fadeIn"><a class="text-primary" href="tel:+447-990-713641">Call: +447-9907-13641</a></h5>
                               <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
                               <hr class="primary">
-                              <p>For enquiries kindly fill out the form below and we'll get back to you as soon as possible.</p>
+                              <p><a href="tel:+447-990-713641">Call us <i class="fa fa-phone"></i></a> or kindly fill out the form below and we'll get back to you as soon as possible.</p>
                           </div>
                           <div class="col-lg-12 col-sm-12  ml-auto">
                               <form action="" id="EmailForm" method=”POST” name=”EmailForm” class="gform contact-form row">   
