--- a/about.html
+++ b/about.html
@@ -70,15 +70,15 @@
                 <span class="section-heading-upper">Spanish Trained Tiler</span>
                 <span class="section-heading-lower">About Soababio</span>
               </h2>
-              <p> Soababio Tiling is a professional tiling service of the highest quality. Fully experienced in all aspects of tiling, both internal and external tiling jobs; that is from preparation and fixing to cleaning and restoration.</p>
-<p>As the CEO of Soababio tiling, Samuel is a Spanish trained tiler with over 20 years of experience working as a tiler both in Spain and in the UK. Soababio tiling offers neat and clean services.</p> 
+              <p class="text-justify"> Soababio Tiling is a professional tiling service of the highest quality. Fully experienced in all aspects of tiling, both internal and external tiling jobs; that is from preparation and fixing to cleaning and restoration.</p>
+<p class="text-justify">As the CEO of Soababio tiling, Samuel is a Spanish trained tiler with over 20 years of experience working as a tiler both in Spain and in the UK. Soababio tiling offers neat and clean services.</p> 
 
-<p>We specialise in all types of tiling, different materials ranging from porcelain, ceramic, granite, slate, natural stone, travertine, marble, mosaics etc.  fixing tiles on underfloor heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old tiles and many more.</p>
-<p>We do offer services in price work, per meter square, day, and hours as well as pricing depending on the job.
+<p class="text-justify">We specialise in all types of tiling, different materials ranging from porcelain, ceramic, granite, slate, natural stone, travertine, marble, mosaics etc.  fixing tiles on underfloor heating system, expert in working with ditramatt, decoupling or durabasere as well as grouting on old tiles and many more.</p>
+<p class="text-justify">We do offer services in price work, per meter square, day, and hours as well as pricing depending on the job.
              You can contact us for free estimate and quotation now on: 079901713641</p>
 
              
-              <p class="mb-0">We guarantee that you will fall in <em>love</em> with our work</p>
+              <p class="mb-0 text-justify">We guarantee that you will fall in <em>love</em> with our work</p>
             </div>
           </div>
         </div>
