add new img and testimony

--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,15 @@
               </ol>
               <div class="carousel-inner mt-1 mb-0">
                 <div class="carousel-item active">
+                  <div class="rounded bg-faded p-3 text-left">
+                     <p><em>21st Sep, 2020</em></p>
+                     <p class="m-4">"Samuel comes highly rated and I can see why. 
+                       Easy to communicate with before the work was done, came on time and finished the job very quickly (making him very efficient in my book). 
+                       The tiling itself is excellent (and I'm a bit of a perfectionist). 
+                       I would recommend Samuel to anyone that's looking for a perfect job done."</p>
+                  </div>
+               </div>
+                <div class="carousel-item">
                    <div class="rounded bg-faded p-3 text-left">
                       <p>17th Aug, 2020 </p>
                       <p class="m-4">"Sam goes further then any tiler I have had work for me before - his work ethic is second to none.
