--- a/gallery.html
+++ b/gallery.html
@@ -11,16 +11,10 @@
   <title>Soababio Tiling Ltd</title>
   <link rel="icon" href="img/soababiotiling/favicon.png" sizes="16x16" type="image/png">
 
-  <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
   <link href="css/business-casual.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -83,12 +77,24 @@
           <div class="carousel-inner gallery">
             <div class="carousel-item active">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
-            </div>
+            </div>            
             <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/10.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/22.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image1.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/14.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/16.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Fourth slide">
@@ -97,7 +103,7 @@
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/18.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item">
-              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image0%20(1).jpeg" alt="Sixth slide">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image0_1.jpg" alt="Sixth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -119,6 +125,15 @@
               </ol>
               <div class="carousel-inner mt-1 mb-0">
                 <div class="carousel-item active">
+                  <div class="rounded bg-faded p-3 text-left">
+                     <p><em>21st Sep, 2020</em></p>
+                     <p class="m-4">"Samuel comes highly rated and I can see why. 
+                       Easy to communicate with before the work was done, came on time and finished the job very quickly (making him very efficient in my book). 
+                       The tiling itself is excellent (and I'm a bit of a perfectionist). 
+                       I would recommend Samuel to anyone that's looking for a perfect job done."</p>
+                  </div>
+               </div>
+                <div class="carousel-item">
                    <div class="rounded bg-faded p-3 text-left">
                       <p><em>17th Aug, 2020 </em></p>
                       <p class="m-4">"Sam goes further then any tiler I have had work for me before - his work ethic is second to none.
@@ -248,7 +263,16 @@
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/19.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new3.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/15.jpg" alt="Fourth slide">
+            </div>            
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/image3.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new5.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/1.jpg" alt="Fifth slide">
@@ -275,6 +299,15 @@
               </ol>
               <div class="carousel-inner mt-1 mb-0">
                 <div class="carousel-item active">
+                  <div class="rounded bg-faded p-3 text-left">
+                     <p><em>21st Sep, 2020</em></p>
+                     <p class="m-4">"Samuel comes highly rated and I can see why. 
+                       Easy to communicate with before the work was done, came on time and finished the job very quickly (making him very efficient in my book). 
+                       The tiling itself is excellent (and I'm a bit of a perfectionist). 
+                       I would recommend Samuel to anyone that's looking for a perfect job done."</p>
+                  </div>
+               </div>
+                <div class="carousel-item">
                    <div class="rounded bg-faded p-3 text-left">
                       <p><em>17th Aug, 2020 </em></p>
                       <p class="m-4">"Sam goes further then any tiler I have had work for me before - his work ethic is second to none.
@@ -397,10 +430,22 @@
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/Tile-grouting-ideas-Topps-Tiles-Aqua-Grout-920x920.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new1.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/3.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/25.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/4.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/23.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/new7.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
               <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/works/5.jpg" alt="Fourth slide">
@@ -428,6 +473,15 @@
               </ol>
               <div class="carousel-inner mt-1 mb-0">
                 <div class="carousel-item active">
+                  <div class="rounded bg-faded p-3 text-left">
+                     <p><em>21st Sep, 2020</em></p>
+                     <p class="m-4">"Samuel comes highly rated and I can see why. 
+                       Easy to communicate with before the work was done, came on time and finished the job very quickly (making him very efficient in my book). 
+                       The tiling itself is excellent (and I'm a bit of a perfectionist). 
+                       I would recommend Samuel to anyone that's looking for a perfect job done."</p>
+                  </div>
+               </div>
+                <div class="carousel-item">
                    <div class="rounded bg-faded p-3 text-left">
                       <p><em>17th Aug, 2020 </em></p>
                       <p class="m-4">"Sam goes further then any tiler I have had work for me before - his work ethic is second to none.
@@ -523,7 +577,6 @@
       </div>
     </div>
   </section>
-
   <footer class="footer text-faded text-center py-5">
     <div class="container-fluid text-center text-md-left">
       <div class="row">
