--- a/index.html
+++ b/index.html
@@ -61,31 +61,36 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
           </ol>
           <div class="carousel-inner">      
             <div class="carousel-item active">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/Tile-grouting-ideas-2-920x920.jpg" alt="First slide">
             </div>
             <div class="carousel-item ">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/works/new3.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/new3.jpg" alt="Second slide">
             </div>
             <div class="carousel-item ">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/works/21.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/21.jpg" alt="Third slide">
             </div>
             <div class="carousel-item ">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/works/25.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/25.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item ">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/works/3.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/3.jpg" alt="Fifth slide">
             </div>
             <div class="carousel-item ">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/works/8.jpg" alt="First slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/8.jpg" alt="Sixth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-5-920x920.jpg" alt="Second slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/Tile-grouting-ideas-5-920x920.jpg" alt="Seventh slide">
             </div>
              <div class="carousel-item">
-              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/Tile-grouting-ideas-1-920x920.jpg" alt="Third slide">
+              <img class="d-block w-100 intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/home-img/Tile-grouting-ideas-1-920x920.jpg" alt="Eighth slide">
             </div>
             
           </div>
