--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/business-casual.min.css" rel="stylesheet">
 
   </head>
 
@@ -32,7 +32,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
+        <a aria-label="Soababio Logo" class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -216,23 +216,23 @@
 
                                  <div class="col-md-4">
                                       <label></label>
-                                      <input id="name" name="name" type="text" class="form-control" placeholder="Name">
+                                      <input aria-label="Your name" id="name" name="name" type="text" class="form-control" placeholder="Name">
                                   </div>
                                   <div class="col-md-4">
                                       <label></label>
-                                      <input id="email" name="email" type="text" class="form-control" placeholder="Email">
+                                      <input aria-label="Your email address" id="email" name="email" type="text" class="form-control" placeholder="Email">
                                   </div>
                                   <div class="col-md-4">
                                       <label></label>
-                                      <input id="phone" name="phone" type="text" class="form-control" placeholder="Phone">
+                                      <input aria-label="Your phone number" id="phone" name="phone" type="text" class="form-control" placeholder="Phone">
                                   </div>
                                   <div class="col-md-12">
                                       <label></label>
-                                      <textarea id="message" name="message" class="form-control" rows="9" placeholder="Your message here.."></textarea>
+                                      <textarea aria-label=" Type your message" id="message" name="message" class="form-control" rows="9" placeholder="Your message here.."></textarea>
                                   </div>
                                    <div class="col-md-4 col-md-offset-4">
                                       <label></label>
-                                      <button id="submit" type="submit" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="ion-android-arrow-forward"></i></button>
+                                      <button aria-label="Submit button" id="submit" type="submit" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="ion-android-arrow-forward"></i></button>
                                   </div>
                               </form>
                           </div>
