--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
-  <link href="css/business-casual.css" rel="stylesheet">
+  <link href="css/business-casual.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
+      <a aria-label="Soababio Logo" class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html"><img class="responsive mr-2" style="width: 110px; height: 50px;" src="img/edit/facebook_cover_photo_1~2.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -104,15 +104,15 @@
           </a>
         </div>
            
-        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+        <div class="intro-text left-0 text-center bg-faded p-2 rounded">
           <h3 class="section-heading mb-4">
             <span class="section-heading-upper">Welcome</span>
             <span class="section-heading-lower">Where Quality Talks</span>
           </h3>
-          <p class="mb-3">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at <a href="gallery.html"><em>some of our works</em></a> - we guarantee you value for money!
+          <p class="mb-3 text-justify p-2">We are excited for your visit to our site. Our clients are our greatest asset and so your satisfaction is our priority. Take a look at <a href="gallery.html"><em>some of our works</em></a> - we guarantee you value for money!
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-lg" href="tel:+447-990-713641">Call Us <i class="fa fa-phone text-muted"></i></a>
+            <a class="btn btn-primary btn-lg shadow" href="tel:+447-990-713641">Call Us <i class="fa fa-phone text-white"></i></a>
           </div>
         </div>
       </div>
